=================

2.0.2 => 2.0.3
=========================
- Dashboard (by Bishop Bettini)
- start/stop date for a survey (by Bishop Bettini)
- A conditional question resulted in a "non-required" for the question it depends on, this limit has been removed.
- You can know do authenticated ldap binds when searching for the uid, MS AD needs this (is more secure than anonymous binds anyway)

2.0.1 => 2.0.2
=========================
- Multiple small fixes (a php notice people were seeing, a small fix for managing admins and a fix for deleting a response for an active survey)

2.0.0 => 2.0.1
=========================
- Already on 2.0.1
- Changed language detection so you can select the language also in the admin interface
- some session cleanups
Changes from 1.8.2.e till 2.0.1 made by Franky(liedekef)

1.8.2.f => 2.0.0
=========================
- bumped the version to 2.0.0 (long overdue)
- Added the posibility to define conditions on a question. See the help page in the admin interface for more info. In short:
A question is only shown when a condition is met.
All conditions are "OR" conditions, so if one conditions is fullfilled, the question is shown.
A question that has a condition must be an optional question. So, if you define a condition on a question, the "Required" parameter is set to "No".
A question that has a condition must be on the next page than the question/value that is used to compare it with. Use the "Order tab" to insert a section break where wanted (this is NOT done automatically).

- Discovered the page admin/manage.php?where=purge, to purge a survey
- Added the possibility to purge a response from a survey (only superuser can do this): admin/manage.php?where=response_purge
- You can now configure the mail address used by phpesp when sending mails

20071107
=========================
- Correct LDAP auth, authenticated users are no longer recreated in the DB
- You can choose between LDAP authentication for respondents, designers or both