@@ -7,15 +7,27 @@
                 define('ESP_BASE', dirname(dirname(__FILE__)) .'/');
 
         $CONFIG = ESP_BASE . 'admin/phpESP.ini.php';
+        $DEFAULT_CONFIG = $CONFIG.'.default';
+        $FIXED_CONFIG = $CONFIG.'.default';
+        if(!file_exists($DEFAULT_CONFIG)) {
+                echo("<b>FATAL: Unable to open default config file. Aborting.</b>");
+                exit;
+        }
         if(!file_exists($CONFIG)) {
-                echo("<b>FATAL: Unable to open config file Aborting.</b>");
+                echo("<b>FATAL: Unable to open config file. Aborting.</b>");
+                exit;
+        }
+        if(!file_exists($FIXED_CONFIG)) {
+                echo("<b>FATAL: Unable to open fixed config file. Aborting.</b>");
                 exit;
         }
         if(!extension_loaded('mysql')) {
                 echo('<b>FATAL: Mysql extension not loaded. Aborting.</b>');
                 exit;
         }
+        require_once($DEFAULT_CONFIG);
         require_once($CONFIG);
+        require_once($FIXED_CONFIG);
 
         esp_init_adodb();
 
